Change name of file. Update image alt text

--- a/code/index.html
+++ b/code/index.html
@@ -34,7 +34,7 @@
               <a class="active home-nav" aria-current="page" href="#">Home</a>
             </li>
             <li>
-              <a href="./tips.html">Tips</a>
+              <a href="newsreviews.html">News & Reviews</a>
             </li>
             <li>
               <a href="quotes.html">Quotes & Memes</a>
@@ -65,7 +65,8 @@
         <div class="grid-parent-big-news">
           <div class="grid-child-big-news paragraph-grid-item">
             <div class="big-news-paragraph">
-              <h2>The Latest Rage - Cat Yoga!</h2>
+              <h2>News</h2>
+              <h3>The Latest Rage - Cat Yoga!</h3>
               <p>
                 Cat Yoga is a calm and relaxing yin yoga class that suits
                 everyone. In the presence of our kitty cats, you get to land in
@@ -147,7 +148,7 @@
         <div class="grid-parent-other-news">
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Bouldering</h4>
+              <h5>Bouldering</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -193,7 +194,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Outdoor Yoga</h4>
+              <h5>Outdoor Yoga</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -238,7 +239,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Power Walkin'</h4>
+              <h5>Power Walkin'</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -278,7 +279,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Abs Crunchin'</h4>
+              <h5>Abs Crunchin'</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
