--- a/code/mostwanted.html
+++ b/code/mostwanted.html
@@ -40,7 +40,9 @@
                   <a aria-current="page" href="index.html" title="Home">Home</a>
                 </li>
                 <li>
-                  <a href="./tips.html" title="Tips">Tips</a>
+                  <a href="newsreviews.html" title="News & Reviews"
+                    >News & Reviews</a
+                  >
                 </li>
                 <li>
                   <a href="quotes.html" title="Quotes & Memes"
