--- a/code/newsreviews.html
+++ b/code/newsreviews.html
@@ -40,7 +40,12 @@
                   <a aria-current="page" href="index.html" title="Home">Home</a>
                 </li>
                 <li>
-                  <a class="active" href="./tips.html" title="Tips">Tips</a>
+                  <a
+                    class="active"
+                    href="./newsreviews.html"
+                    title="News & Revies"
+                    >News & Reviews</a
+                  >
                 </li>
                 <li>
                   <a href="quotes.html" title="Quotes & Memes"
@@ -75,8 +80,9 @@
         <div class="grid-parent-big-news">
           <div class="grid-child-big-news paragraph-grid-item">
             <div class="big-news-paragraph">
-              <h2>Crazy for Catnip</h2>
-              <h3>Why cats lose their minds over this perennial herb</h3>
+              <h2>News & Reviews</h2>
+              <h3>Crazy for Catnip</h3>
+              <h4>Why cats lose their minds over this perennial herb</h4>
               <p>
                 So, what is catnip anyway? Catnip is one of the approximately
                 250 species in the mint family and has a leafy green appearance.
@@ -88,7 +94,7 @@
                 to this herb is hereditary—an estimated 50 percent of cats have
                 no reaction.
               </p>
-              <h3>Smelling vs. Eating</h3>
+              <h4>Smelling vs. Eating</h4>
               <p>
                 The most intense catnip experience starts with the nose—one
                 whiff of the stuff and your cat promptly goes nuts. Researchers
@@ -127,8 +133,17 @@
                   <source src="../video/catnip.mp4" type="video/mp4" />
                 </video>
                 <figcaption>
-                  <em>Video:</em><em> Smirre Archives</em>
+                  <em>Video:</em><em> Smirre Archives</em><em>Music:</em
+                  ><em>Bensound - Royalty Free Music for Creators</em>
                 </figcaption>
+                <div class="primary-link">
+                  <a
+                    href="https://www.bensound.com/royalty-free-music?filters[]=Action&category=Mood&type=free&sort=relevance"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Take Me to Bensound</a
+                  >
+                </div>
               </figure>
             </div>
           </div>
@@ -159,7 +174,7 @@
         <div class="grid-parent-other-news">
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Paperboard Box</h4>
+              <h5>Paperboard Box</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -189,7 +204,7 @@
                       <img
                         src="../img/bb1.jpg"
                         class="img-other-news"
-                        alt="A cat climbing"
+                        alt="A cat in a paperboard box"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -202,7 +217,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Carton Board Box</h4>
+              <h5>Carton Board Box</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -221,7 +236,7 @@
                         <img
                           src="../img/bb2.jpg"
                           class="img-other-news"
-                          alt="A cat doing yoga outdoors"
+                          alt="A cat in a carton board box"
                         />
                         <figcaption class="figcaption-other-news">
                           <em>Photo:</em><em>Smirre Archives</em>
@@ -235,7 +250,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Cardboard Box</h4>
+              <h5>Cardboard Box</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -259,7 +274,7 @@
                       <img
                         src="../img/bb3.jpg"
                         class="img-other-news"
-                        alt="A cat walking"
+                        alt="A cat in a cardboard box"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -272,7 +287,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Carton Board Bed</h4>
+              <h5>Carton Board Bed</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -291,7 +306,7 @@
                       <img
                         src="../img/bb4.jpg"
                         class="img-other-news"
-                        alt="A cat doing crunches"
+                        alt="A cat on a carton bed"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -304,7 +319,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Blekinge</h4>
+              <h5>Blekinge</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -334,7 +349,7 @@
                       <img
                         src="../img/bb5.jpg"
                         class="img-other-news"
-                        alt="A cat climbing"
+                        alt="Two cats looking out a window"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -347,7 +362,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Umeå</h4>
+              <h5>Umeå</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -372,7 +387,7 @@
                         <img
                           src="../img/bb6.jpg"
                           class="img-other-news"
-                          alt="A cat doing yoga outdoors"
+                          alt="Two cats on opposite sides of a bed"
                         />
                         <figcaption class="figcaption-other-news">
                           <em>Photo:</em><em>Smirre Archives</em>
@@ -386,7 +401,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Malmö</h4>
+              <h5>Malmö Central B&B</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -416,7 +431,7 @@
                       <img
                         src="../img/bb7.jpg"
                         class="img-other-news"
-                        alt="A cat walking"
+                        alt="A cat sleeping on a bed close to a radiator"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -429,12 +444,14 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Malmö Spa</h4>
+              <h5>Malmö Spa</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
                     <div>
-                      <p class="review"><q>Why, just why?</q></p>
+                      <p class="review">
+                        <q>Why would I want to jump into water?</q>
+                      </p>
                       <div class="icon-div">
                         <i class="material-icons pets" aria-hidden="true"
                           >pets</i
@@ -445,7 +462,7 @@
                       <img
                         src="../img/bb8.jpg"
                         class="img-other-news"
-                        alt="A cat doing crunches"
+                        alt="A cat examining a foot bathtub"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -458,7 +475,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Malmö</h4>
+              <h5>Malmö Central B&B</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -488,7 +505,7 @@
                       <img
                         src="../img/bb9.jpg"
                         class="img-other-news"
-                        alt="A cat climbing"
+                        alt="A cat on a chair at a small table on a balcony"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -501,7 +518,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Umeå</h4>
+              <h5>Umeå</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -523,7 +540,7 @@
                         <img
                           src="../img/bb10.jpg"
                           class="img-other-news"
-                          alt="A cat doing yoga outdoors"
+                          alt="Cat paw prints in the snow on a balcony"
                         />
                         <figcaption class="figcaption-other-news">
                           <em>Photo:</em><em>Smirre Archives</em>
@@ -537,7 +554,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Malmö Best Western</h4>
+              <h5>Malmö Best Western B&B</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -561,7 +578,7 @@
                       <img
                         src="../img/bb11.jpg"
                         class="img-other-news"
-                        alt="A cat walking"
+                        alt="A cat in a carton bed on a balcony"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -574,7 +591,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Malmö Spa</h4>
+              <h5>Malmö Spa</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -593,7 +610,7 @@
                       <img
                         src="../img/bb12.jpg"
                         class="img-other-news"
-                        alt="A cat doing crunches"
+                        alt="A cat looking in to the camera with a TV with a wild cat in the background"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -606,7 +623,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Malmö Spa</h4>
+              <h5>Malmö Spa</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -636,7 +653,7 @@
                       <img
                         src="../img/bb13.jpg"
                         class="img-other-news"
-                        alt="A cat climbing"
+                        alt="A cat on a yoga mat"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -649,7 +666,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Umeå</h4>
+              <h5>Umeå</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -677,7 +694,7 @@
                         <img
                           src="../img/bb14.jpg"
                           class="img-other-news"
-                          alt="A cat doing yoga outdoors"
+                          alt="Two cats holding each other on an armchair"
                         />
                         <figcaption class="figcaption-other-news">
                           <em>Photo:</em><em>Smirre Archives</em>
@@ -691,7 +708,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Malmö</h4>
+              <h5>Malmö Central B&B</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -721,7 +738,7 @@
                       <img
                         src="../img/bb15.jpg"
                         class="img-other-news"
-                        alt="A cat walking"
+                        alt="Two cats in the sun on a balcony"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
@@ -734,7 +751,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Malmö Spa</h4>
+              <h5>Malmö Spa</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -762,7 +779,7 @@
                       <img
                         src="../img/bb16.jpg"
                         class="img-other-news"
-                        alt="A cat doing crunches"
+                        alt="A cat raising one leg in the air"
                       />
                       <figcaption class="figcaption-other-news">
                         <em>Photo:</em><em>Smirre Archives</em>
