--- a/code/quotes.html
+++ b/code/quotes.html
@@ -40,7 +40,9 @@
                   <a aria-current="page" href="index.html" title="Home">Home</a>
                 </li>
                 <li>
-                  <a href="./tips.html" title="Tips">Tips</a>
+                  <a href="newsreviews.html" title="News & Reviews"
+                    >News & Reviews</a
+                  >
                 </li>
                 <li>
                   <a class="active" href="quotes.html" title="Quotes & Memes"
@@ -76,7 +78,8 @@
         <div class="grid-parent-big-news">
           <div class="grid-child-big-news paragraph-grid-item">
             <div class="big-news-paragraph">
-              <h2>The Latest Rage - Cat Yoga!</h2>
+              <h2>Quotes & Memes</h2>
+              <h3>xxx</h3>
               <p>
                 Cat Yoga is a calm and relaxing yin yoga class that suits
                 everyone. In the presence of our kitty cats, you get to land in
@@ -158,7 +161,7 @@
         <div class="grid-parent-other-news">
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Bouldering</h4>
+              <h5>Bouldering</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -190,7 +193,7 @@
                     <figure>
                       <img
                         src="../img/climbingCat.jpg"
-                        class="img-other-news-two"
+                        class="img-other-news"
                         alt="A cat climbing"
                       />
                       <figcaption class="figcaption-other-news">
@@ -204,7 +207,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Outdoor Yoga</h4>
+              <h5>Outdoor Yoga</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -234,7 +237,7 @@
                       <figure>
                         <img
                           src="../img/outoodoorYogaCat.jpg"
-                          class="img-other-news-one"
+                          class="img-other-news"
                           alt="A cat doing yoga outdoors"
                         />
                         <figcaption class="figcaption-other-news">
@@ -249,7 +252,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Power Walkin'</h4>
+              <h5>Power Walkin'</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -275,7 +278,7 @@
                     <figure>
                       <img
                         src="../img/walkingCat.jpeg"
-                        class="img-other-news-three"
+                        class="img-other-news"
                         alt="A cat walking"
                       />
                       <figcaption class="figcaption-other-news">
@@ -289,7 +292,7 @@
           </div>
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
-              <h4>Abs Crunchin'</h4>
+              <h5>Abs Crunchin'</h5>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="other-news-div">
                   <div class="card">
@@ -310,7 +313,7 @@
                     <figure>
                       <img
                         src="../img/crunchingCat.jpg"
-                        class="img-other-news-four"
+                        class="img-other-news"
                         alt="A cat doing crunches"
                       />
                       <figcaption class="figcaption-other-news">
