add meta tag and alttexts, remove style from html

--- a/code/index.html
+++ b/code/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Mews</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +27,7 @@
         <li><a href="#">news</a></li>
         <li><a href="#">editorial</a></li>
         <div class="logo-navbar">
-          <img src="./logo.svg" alt="logo of a cat footprint" style="height:50px">
+          <img src="./logo.svg" alt="logo of a cat footprint">
         </div>
         <li><a href="#">lifestyle</a></li>
         <li><a href="#">culture</a></li>
@@ -38,10 +39,10 @@
      <!-- Big news -->
       <article class="big-news">
         <div class="breaking-container">
-          <p class="breaking">Breaking news Breaking news</p>
+          <p class="breaking-text">Breaking news Breaking news</p>
         </div>
         <div class="big-news-img">
-          <img src="./bowls-2-612x612.jpg">
+          <img src="./bowls-2-612x612.jpg" alt="cat looking up from empty bowl">
         </div>
         <div class="big-text-wrapper">
           <h2>Bowls still empty</h2>
@@ -54,7 +55,7 @@
       <article class="news-item item1">  
         <div>
           <p class="tag">NEWS</p>
-          <img src="./20201023.jpg">
+          <img src="./20201023.jpg" alt="two cats looking sternly in to the camera">
         </div>
         <div class="item1-text-wrapper">
           <h3>Cat union formed</h3>
@@ -65,7 +66,7 @@
       <article class="news-item item2">
         <div>
           <p class="tag">EDITORIAL</p>
-          <img src="./IMG_0630.jpg">
+          <img src="./IMG_0630.jpg" alt="white cat with big eyes">
         </div>
         <div class="text-wrapper">
           <h4>Birds, why do they even exist?</h4>
@@ -74,7 +75,7 @@
       <article class="news-item item3">
         <div>
           <p class="tag">LIFESTYLE</p>
-          <img src="./20210626_151104_246.jpg">
+          <img src="./20210626_151104_246.jpg" alt="long haired calico cat sleeping">
         </div>
         <div>
           <h4>New trend: wake up at 3 for more nap time during the day</h4>
@@ -83,7 +84,7 @@
       <article class="news-item item4">
         <div>
           <p class="tag">LIFESTYLE</p>
-          <img src="./lifestyle.jpg">
+          <img src="./lifestyle.jpg" alt="grey striped cat looking at a piece of plastic on the floor">
         </div>
         <div>
           <h4>Ignore expensive toys - play with trash instead!</h4>
@@ -92,7 +93,7 @@
       <article class="news-item item5">
         <div>
           <p class="tag">NEWS</p>
-          <img src="./20220616.jpg">
+          <img src="./20220616.jpg" alt="cat crates with cats in them stacked on each other">
         </div>
         <div>
           <h4>Study shows most cats avoid the vet</h4>
@@ -101,7 +102,7 @@
       <article class="news-item item6">
         <div>
           <p class="tag">CULTURE</p>
-          <img src="./20220802.jpg">
+          <img src="./20220802.jpg" alt="grey striped cat looking out from a thin cardboard box">
         </div>
         <div>
           <h4>Cardboard box review</h4>
@@ -110,7 +111,7 @@
       <article class="news-item item7">
         <div>
           <p class="tag">WEATHER</p>
-          <img src="./catrain-612x612.jpg">
+          <img src="./catrain-612x612.jpg" alt="cat in window sceptically looking at rain outside">
         </div>
         <div>
           <h4>Weather report: Not okay</h4>
@@ -119,7 +120,7 @@
       <article class="news-item item8">
         <div class="article-img">
           <p class="tag">CULTURE</p>
-          <img src="./pexels-pixabay-39484.jpg">
+          <img src="./pexels-pixabay-39484.jpg" alt="red squirrel">
         </div>
         <div class="text-wrapper">
           <h4>Cat tv: squirrel feeder lives up to hype</h4>
@@ -128,7 +129,7 @@
       <article class="news-item item9">
         <div>
           <p class="tag">LIFESTYLE</p>
-          <img src="./IMG_0625.JPG">
+          <img src="./IMG_0625.JPG" alt="grey striped cat on bed">
         </div>
         <div>
           <h4>Which bed is best for you?</h4>
